fixed overlap bug on homepage

--- a/smblegal/src/App.css
+++ b/smblegal/src/App.css
@@ -250,12 +250,11 @@ nav a:hover::before {
   padding-top: 10px;
   padding-bottom: 10px;
   border: 1px solid black;
-  margin: 40px;
   line-height: 10px;
   box-shadow: 3px 3px; 
   text-transform: uppercase;
   font-weight: 580;
-  position: relative;
+  display: block;
   
 }
 .employment, .governance, .formation {
